--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^3.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
